    Gambatte (thanks to Andreas Pakulat)
 7. Fix menuitems with Qt4.6 - these were drawn 1 pixel to thin.
 8. Fix plasma calendar's week spinwidet mouse-over under KDE SC4.4
 9. If using a background gradient, or cannot deternine a widget's parent's
    background colour - usr a 10% alpha white as the etch colour.
10. Fix cropping issues with KIntNumInput in QFormLayout in Qt4.6

1.0.1
-----
1. Remove QWidget->int casting that was causing compile failures for some.
2. Fix Qt only compilation due to KColorUtils usage.
3. Fix KTorrent's progressbars appearing as disabled.
4. For OpenOffice.org, dont use faded or bordered menuitems - as there are
   still redraw errors on the first/last item. This is all OO.o's fault, but
   these changes improve the situation a little.
5. Fix kwin compilation with KDE<4.3
6. Apply visual studio patch from Benjamin Sonnemann

1.0.0
-----
 1. Added option to colour selected check/radios.
 2. Added option to use a smaller dot for radios.
 3. Made check/radio and splitter highlight options a configurable % - i.e.
    not based on standard hightlight %
 4. When highlighting check/radio/splitter background, round the corners and
    use the selection gradient..
 5. Added new splitter/handle/thumb style: single dot.
 6. Default check/radio/splitter/expander highlight set to 3%
 7. Don't do coloured mouse over for buttons of editable combos, spin buttons,
    or scrollbar buttons.
 8. Don't do regular coloured mouse over of sliders when these are set to be
    coloured on mouse over.
 9. Allow to specify strength when colouring selected tab.
10. Remove support for QtCurve styles (these appear as unique KDE styles in the
    main KDE style selection dialog). Re-enable support by passing
    -DQTC_STYLE_SUPPORT=true to cmake.
11. Slightly lighter shade used for coloured mouse over of arrows.
12. Dont draw border around rounded selection.
13. Add option to specify appearance of dock-widget titlebars.